; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/apmd/contrib/extr_pccardq.c_get_slot_number.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/apmd/contrib/extr_pccardq.c_get_slot_number.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"S\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"write\00", align 1
@.str.2 = private unnamed_addr constant [13 x i8] c"write: fail.\00", align 1
@.str.3 = private unnamed_addr constant [5 x i8] c"read\00", align 1
@.str.4 = private unnamed_addr constant [3 x i8] c"%d\00", align 1
@.str.5 = private unnamed_addr constant [18 x i8] c"Invalid response.\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @get_slot_number(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca [8 x i8], align 1
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = call i32 @write(i32 %7, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32 1)
  store i32 %8, i32* %5, align 4
  %9 = icmp slt i32 %8, 1
  br i1 %9, label %10, label %12

10:                                               ; preds = %1
  %11 = call i32 @warn(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0))
  br label %34

12:                                               ; preds = %1
  %13 = load i32, i32* %5, align 4
  %14 = icmp ne i32 %13, 1
  br i1 %14, label %15, label %17

15:                                               ; preds = %12
  %16 = call i32 @warnc(i32 0, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.2, i64 0, i64 0))
  br label %34

17:                                               ; preds = %12
  br label %18

18:                                               ; preds = %17
  %19 = load i32, i32* %3, align 4
  %20 = getelementptr inbounds [8 x i8], [8 x i8]* %4, i64 0, i64 0
  %21 = call i32 @read(i32 %19, i8* %20, i32 8)
  store i32 %21, i32* %5, align 4
  %22 = icmp slt i32 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %18
  %24 = call i32 @warn(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.3, i64 0, i64 0))
  br label %34

25:                                               ; preds = %18
  %26 = getelementptr inbounds [8 x i8], [8 x i8]* %4, i64 0, i64 7
  store i8 0, i8* %26, align 1
  %27 = getelementptr inbounds [8 x i8], [8 x i8]* %4, i64 0, i64 0
  %28 = call i32 @sscanf(i8* %27, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.4, i64 0, i64 0), i32* %6)
  %29 = icmp ne i32 %28, 1
  br i1 %29, label %30, label %32

30:                                               ; preds = %25
  %31 = call i32 @warnc(i32 0, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.5, i64 0, i64 0))
  br label %34

32:                                               ; preds = %25
  %33 = load i32, i32* %6, align 4
  store i32 %33, i32* %2, align 4
  br label %35

34:                                               ; preds = %30, %23, %15, %10
  store i32 -1, i32* %2, align 4
  br label %35

35:                                               ; preds = %34, %32
  %36 = load i32, i32* %2, align 4
  ret i32 %36
}

declare dso_local i32 @write(i32, i8*, i32) #1

declare dso_local i32 @warn(i8*) #1

declare dso_local i32 @warnc(i32, i8*) #1

declare dso_local i32 @read(i32, i8*, i32) #1

declare dso_local i32 @sscanf(i8*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
